tests/valid/trait/method_call_short_ufcs_literal_type_args.facet
trait Mapper {
  fn map<T>(self: Self, value: unrestricted T) -> unrestricted T;
}

impl Mapper for unrestricted isize {
  fn map<T>(self: Self, value: unrestricted T) -> unrestricted T {
    value
  }
}

fn main() -> unrestricted bool {
  (Mapper::map<unrestricted bool> 0 true)
}
